--- a/wp-content/themes/goalvarenga/assets/sass/_layout.scss
+++ b/wp-content/themes/goalvarenga/assets/sass/_layout.scss
@@ -22,9 +22,9 @@
     //
     // Navbar
     //
-    #main-navigation {
-        margin: 20px 0;
-    }
+    // #main-navigation {
+    //     margin: 20px 0;
+    // }
     //
     // Title, description and image
     //
@@ -113,13 +113,13 @@
 // Sticky footer styles
 //
 #footer {
-    text-align: center;
-    position: absolute;
-    bottom: 0;
+    // text-align: center;
+    // position: absolute;
+    // bottom: 0;
     width: 100%;
-    height: 50px;
-    background-color: #f5f5f5;
-    padding-top: 15px;
+    // height: 50px;
+    // background-color: #f5f5f5;
+    // padding-top: 15px;
 }
 
 html {
@@ -128,6 +128,6 @@ html {
     overflow-y: scroll;
 }
 
-body {
-    margin-bottom: 70px;
-}
+// body {
+//     margin-bottom: 70px;
+// }
