--- a/wp-content/themes/goalvarenga/assets/sass/style.scss
+++ b/wp-content/themes/goalvarenga/assets/sass/style.scss
@@ -44,7 +44,7 @@ h1, h2, h3, h4, h5, p, a, b, title, span, input, button{
         font-size: 18px;
         color: #fff;
         background-color: #000;
-        padding: 5px 20px;
+        padding: 10px 20px;
         border-radius: 5px;
         transition: all .3s ;
         text-decoration: none !important;
@@ -78,6 +78,27 @@ main{
         display: flex;
         justify-content: center;
         align-items: center;
+}
+.titulo{
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        h2{
+                text-align: center;
+                font-weight: 700;
+                font-size: 48px;
+                z-index: 9;
+                color: $preto;
+        }
+        span{
+                -webkit-text-stroke-width: 2px; /* largura da borda */
+                -webkit-text-stroke-color: #efefef; /* cor da borda */
+                text-transform: uppercase;
+                font-size: 73px;
+                font-weight: 700;
+                color: transparent;
+                position: absolute;
+        }
 }
 header{
         @extend .col-md-12;
@@ -241,6 +262,19 @@ header{
                         .rede-facebook{
                                 margin: 0 20px;
                         }
+                        .rede-instagram, .rede-facebook{
+                                svg{
+                                        path{
+                                                transition: all .3s;
+                                        }
+                                        &:hover{
+                                                path{
+                                                        transition: all .3s;
+                                                        fill: #000;
+                                                }
+                                        }
+                                }
+                        }
                         .botao-whats{
                                 font-size: 18px;
                                 color: #fff;
@@ -356,10 +390,13 @@ footer{
                                 padding: 0;
                                 height: 100%;
                                 // overflow: hidden;
+                                height: auto;
                                 position:absolute;
                                 right: 0;
                                 img{
+                                        max-width: 100%;
                                         width: 100%;
+                                        box-shadow: 0px 5px 20px -10px #000000;
                                 }
                         }
                         .descricoes{
@@ -385,10 +422,25 @@ footer{
                 .navegacao-swiper{
                         width: 42%;
                         display: flex;
-                        justify-content: flex-end;
+                        justify-content: space-between;
                         align-items: center;
                         background-color: #fff;
-                        padding: 50px;
+                        padding: 70px 50px;
+                        .branco{
+                                color: transparent;
+                        }
+                        .swiper-pagination{
+                                position: relative;
+                                width: fit-content;
+                                color: $cinza;
+                                font-size: 36px;
+                                font-weight: 400;
+                                .swiper-pagination-current{
+                                        font-size: 60px;
+                                        font-weight: 400;
+                                        color: #242424;
+                                }
+                        }   
                         .botoes{
                                 display: flex;
                                 align-items: center;
@@ -400,6 +452,15 @@ footer{
                                         position: relative;
                                         width: 0;
                                         height: auto;
+                                        svg{
+                                                rect{
+                                                        transition: all .3s;    
+                                                        &:hover{
+                                                                transition: all .3s;
+                                                                fill: $amarelo;
+                                                        }
+                                                }
+                                        }
                                 }
                                 .swiper-button-prev{
                                         &:hover{
@@ -410,8 +471,60 @@ footer{
                                         &:hover{
                                                 transition: all .3s;
                                         }   
-                                }                     
-                        }       
+                                }                    
+                        }    
+                }
+        }
+        .empresa{
+                @extend .col-md-12;
+                padding: 80px 0 0 0;
+                background-color: #fff;
+                .container{
+                        margin-top: 60px;
+                        margin-bottom: 80px;
+                        padding: 0;
+                        display: flex;
+                        .imagens{
+                                @extend .col-md-6;
+                                margin-right: 70px;
+                                padding: 0;
+                                .img2{
+                                        top: 40%;
+                                        right: 0;
+                                        position: absolute;
+                                        z-index: 9;
+                                }
+                        }
+                        .textos{
+                                width: 40%;
+                                padding: 0;
+                                p{
+                                        font-size: 16px;
+                                        font-weight: 300;
+                                        color: #242424;
+                                        margin-bottom: 40px;
+                                }
+                                .icones-texto{
+                                        margin-bottom: 60px;
+                                        span{
+                                                margin-left: 30px;
+                                                h3{
+                                                        font-size: 33px;
+                                                        font-weight: 700;
+                                                        color: $preto;
+                                                        margin-bottom: 5px;
+                                                }
+                                                p{
+                                                        margin-bottom: 0;
+                                                }
+                                        }
+                                }
+                        }
                 }
         } 
+        .servicos{
+                @extend .col-md-12;
+                background-color: #fff;
+                padding: 80px 0 80px 0;
+        }
 }
