--- a/wp-content/themes/goalvarenga/assets/sass/style.scss
+++ b/wp-content/themes/goalvarenga/assets/sass/style.scss
@@ -581,4 +581,91 @@ footer{
                         }
                 }
         }
+        .projetos{
+                @extend .col-md-12;
+                background-color: #fff;
+                padding: 0px 0 28px 0;
+                .container{
+                        margin-top: 100px;
+                        .swiper-container{
+                                .swiper-wrapper{  
+                                        padding-bottom: 50px;                         
+                                        .swiper-slide{
+                                                display: flex;
+                                                justify-content: center;
+                                                align-items: center;
+                                                text-align: center;
+                                                .box{
+                                                        display: flex;
+                                                        justify-content: center;
+                                                        align-items: center;
+                                                        transition: all .2s;  
+                                                        .botao-projetos{
+                                                                font-size: 23px;
+                                                                font-weight: 700;
+                                                                color: #fff;
+                                                                background-color: #000;
+                                                                padding: 15px 30px;
+                                                                position: absolute;
+                                                                text-decoration: none;
+                                                                bottom: -15px;
+                                                                left: 5%;
+                                                                transition: all .3s;
+                                                                &:hover{
+                                                                        transition: all .3s;
+                                                                        background-color: $amarelo;
+                                                                }
+                                                        }                                                            
+                                                }                                        
+                                        }
+                                }   
+                                .swiper-pagination{
+                                        width: 100% !important;
+                                        bottom: 0px;
+                                        .swiper-pagination-bullet{
+                                                background: #D9D9D9;
+                                                width: 15px;
+                                                height: 15px;
+                                        }
+                                        .swiper-pagination-bullet-active{
+                                                background: $amarelo;
+                                        }
+                                }
+                        }               
+                        .swiper-button{
+                                top: unset;
+                                bottom: 50%;
+                                transform: translateY(50%);
+                                width: 50px;
+                                height: 60px;
+                                transition: all .4s;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                position: absolute;
+                                z-index: 99;
+                                background: transparent;                        
+                        }
+                        .prev, .next{
+                                bottom: 45%;
+                                width: auto;                       
+                                height: auto;
+                                svg{
+                                        rect{
+                                                transition: all .3s;
+                                                &:hover{
+                                                        transition: all .3s;
+                                                        fill: $amarelo;
+                                                }
+                                        }
+                                }
+                        }
+                        .next{
+                                right: 10%;
+                        }
+                        .prev{
+                                left: 10%;
+                        }                   
+                }
+        }
 }
