--- a/wp-content/themes/goalvarenga/assets/sass/style.scss
+++ b/wp-content/themes/goalvarenga/assets/sass/style.scss
@@ -76,7 +76,7 @@ h1, h2, h3, h4, h5, p, a, b, title, span, input, button{
         }
 }
 main{
-        margin-top: 98px;
+        margin-top: 97px;
         background-color: $amarelo;
         @media only screen and (max-width: 1475px){
 
@@ -370,6 +370,60 @@ footer{
                 a{
                         float: right;
                 }      
+        }
+}
+.navegacao{
+        background-image: url(../images/breadcrumps.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        padding: 50px 0;
+        h1{
+                text-align: center;
+                font-size: 48px;
+                font-weight: 500;
+                margin: 0;
+                color: #fff;
+                margin-bottom: 15px;
+        }
+        .breadcrumb{
+                background-color: transparent;
+                padding: 0px;
+                margin-bottom: 0px;
+                ul{
+                        display: flex;
+                        list-style: none;
+                        justify-content: center;
+                        align-items: baseline;
+                        padding: 0;
+                        li{
+                                padding-right: 5px;
+                                a{
+                                        font-weight: 500;
+                                        font-size: 16px;
+                                        color: #fff;
+                                        transition: all .3s;
+                                }
+                        }
+                        .atual{
+                                h1{
+                                        font-weight: 500;
+                                        font-size: 16px;
+                                        color: #fff;
+                                }
+                        }
+                }
+        }
+               
+        
+        @media only screen and (max-width: 600px){
+                h1{
+                        font-size: 32px;
+                }
+                .breadcrumb{
+                        .container{
+                                padding-top: 10px; 
+                        }
+                }
         }
 }
 .home{
@@ -711,6 +765,63 @@ footer{
                                                         }
                                                 }
                                         }
+                                }
+                        }
+                }
+        }
+}
+.empresa{
+        @extend .col-md-12;
+        padding: 0;
+        background-color: #fff;
+        .container{
+                .sobre{
+                        @extend .col-md-12;
+                        padding: 0;
+                        margin: 70px 0 100px 0;
+                        .infos{
+                                @extend .col-md-6;
+                                padding: 0;
+                                h3{
+                                        color: $preto;
+                                        font-size: 33px;
+                                        font-weight: 700;
+                                        margin: 0 0 20px 0;
+                                }
+                                p{
+                                        margin-bottom: 50px;
+                                        color: 16px;
+                                        font-weight: 300;
+                                }
+                                .colapsagem{
+                                        .titulos{
+                                                a{
+                                                        background-color: #f5f5f5;
+                                                        font-size: 20px;
+                                                        text-decoration: none;
+                                                        transition: all .3s;
+                                                        color: $amarelo;
+                                                        &:hover{
+                                                                transition: all .3s;
+                                                                background-color: $amarelo;
+                                                                color: #fff;
+                                                        }
+                                                }
+                                        }
+                                        span{
+                                                height: 180px;
+                                                background-color: #f5f5f5;
+                                        }
+                                        .visao, .valores{
+                                                display: none;
+                                        }
+                                }
+                        }
+                        .imagem{
+                                @extend .col-md-6;
+                                padding: 0;
+                                img{
+
                                 }
                         }
                 }
