--- a/wp-content/themes/goalvarenga/assets/sass/style.scss
+++ b/wp-content/themes/goalvarenga/assets/sass/style.scss
@@ -778,9 +778,11 @@ footer{
                 .sobre{
                         @extend .col-md-12;
                         padding: 0;
+                        display: flex;
+                        justify-content: space-between;
                         margin: 70px 0 100px 0;
                         .infos{
-                                @extend .col-md-6;
+                                @extend .col-md-5;
                                 padding: 0;
                                 h3{
                                         color: $preto;
@@ -795,22 +797,50 @@ footer{
                                 }
                                 .colapsagem{
                                         .titulos{
-                                                a{
-                                                        background-color: #f5f5f5;
-                                                        font-size: 20px;
-                                                        text-decoration: none;
-                                                        transition: all .3s;
-                                                        color: $amarelo;
-                                                        &:hover{
-                                                                transition: all .3s;
-                                                                background-color: $amarelo;
-                                                                color: #fff;
+                                                width: 100%;
+                                                ul{
+                                                        padding: 0;
+                                                        li{
+                                                                list-style: none;
+                                                                a{
+                                                                        @extend .col-md-4;
+                                                                        padding: 12px 0;
+                                                                        text-align: center;
+                                                                        background-color: #f5f5f5;
+                                                                        font-size: 20px;
+                                                                        text-decoration: none;
+                                                                        transition: all .3s;
+                                                                        color: $amarelo;
+                                                                }
+                                                                // &:hover a{
+                                                                //         transition: all .3s;
+                                                                //         background-color: $amarelo;
+                                                                //         color: #fff;
+                                                                // }
+                                                                &:nth-child(1){
+                                                                        a{            
+                                                                                background-color: $amarelo;
+                                                                                color: #fff;
+                                                                        }
+                                                                } 
+                                                                &:nth-child(2){
+                                                                        a{            
+                                                                                border-left: 1px solid #fff;
+                                                                                border-right: 1px solid #fff;
+                                                                        }
+                                                                } 
                                                         }
                                                 }
                                         }
                                         span{
-                                                height: 180px;
                                                 background-color: #f5f5f5;
+                                                border: 1px solid #fff;
+                                                padding: 0 85px;
+                                                text-align: center;
+                                                height: 180px;
+                                                display: flex;
+                                                justify-content: center;
+                                                align-items: center;
                                         }
                                         .visao, .valores{
                                                 display: none;
@@ -821,7 +851,7 @@ footer{
                                 @extend .col-md-6;
                                 padding: 0;
                                 img{
-
+                                        box-shadow: 0px 5px 20px -10px #000000;
                                 }
                         }
                 }
