--- a/wp-content/themes/goalvarenga/assets/sass/style.scss
+++ b/wp-content/themes/goalvarenga/assets/sass/style.scss
@@ -855,5 +855,86 @@ footer{
                                 }
                         }
                 }
+                .informativo{
+                        @extend .col-md-12;
+                        padding: 0;
+                        .contagem{
+                                display: flex;
+                                align-items: center;
+                                span{
+                                        font-size: 16px;
+                                        font-weight: 300;
+                                        color: $preto;
+                                        border-right: 2px solid $amarelo;
+                                        b{
+                                                margin-right: 15px;
+                                                color: $amarelo;
+                                                font-size: 48px;
+                                                font-weight: 600;
+                                        }
+                                        &:nth-child(4){
+                                                border: none;
+                                        }
+                                }
+                                .box1{
+                                        padding-right: 110px;
+                                }
+                                .box2{
+                                        padding: 0 110px;
+                                }
+                                .box3{
+                                        padding-left: 110px;
+                                }
+                        }
+                }
+                .oque-fazemos{
+                        @extend .col-md-12;
+                        padding: 0;
+                        margin: 90px 0;
+                        h3{
+                                font-size: 33px;
+                                font-weight: 700;
+                                text-align: center;
+                                color: $preto;
+                                margin-bottom: 15px;
+                        }
+                        h4{
+                                font-size: 20px;
+                                text-align: center;
+                                font-weight: 400;
+                                color: $preto;
+                                margin: 0;
+                                b{
+                                        color: $amarelo;
+                                        font-weight: 600;
+                                }
+                        }
+                        .icones{
+                                display: flex;
+                                justify-content: space-between;
+                                align-items: center;
+                                margin-top: 50px;
+                                div{
+                                        @extend .col-md-3;
+                                        width: 22%;
+                                        padding: 0;
+                                        flex-direction: column;
+                                        padding: 30px;
+                                        width: 315px;
+                                        height: 262px;
+                                        border: 2px solid $amarelo;
+                                        h4{
+                                                margin: 30px 0 10px 0;
+                                                color: $amarelo;
+                                                font-weight: 700;
+                                        }
+                                        p{
+                                                margin: 0;
+                                                text-align: center;
+                                                font-weight: 300;
+                                        }
+                                }
+                        }
+                }
         }
 }
