--- a/wp-content/themes/goalvarenga/assets/sass/style.scss
+++ b/wp-content/themes/goalvarenga/assets/sass/style.scss
@@ -70,6 +70,22 @@ h1, h2, h3, h4, h5, p, a, b, title, span, input, button{
                 color: $amarelo;   
         }
 }
+.botao-terciario{
+        text-decoration: none !important;
+        font-size: 16px;
+        font-weight: 500;
+        background-color: $amarelo;
+        border: 1px solid #fff;
+        transition: all .3s ;
+        padding: 7px 16px;
+        border-radius: 5px;
+        color: #fff;
+        &:hover{
+                transition: all .3s;
+                background-color: $preto;
+                color: #fff;
+        }
+}
 @media (min-width: 1500px){
         .container {
                 width: 1500px;
@@ -77,7 +93,6 @@ h1, h2, h3, h4, h5, p, a, b, title, span, input, button{
 }
 main{
         margin-top: 97px;
-        background-color: $amarelo;
         @media only screen and (max-width: 1475px){
 
         }
@@ -428,6 +443,7 @@ footer{
 }
 .home{
         @extend .col-md-12;
+        background-color: $amarelo;
         padding: 0;
         .banner{
                 @extend .col-md-12;
@@ -773,7 +789,6 @@ footer{
 .empresa{
         @extend .col-md-12;
         padding: 0;
-        background-color: #fff;
         .container{
                 .sobre{
                         @extend .col-md-12;
@@ -937,4 +952,115 @@ footer{
                         }
                 }
         }
+}
+.servico{
+        @extend .col-md-12;
+        padding: 0;
+        .container{
+                .cards{
+                        @extend .col-md-12;
+                        padding: 0;     
+                        margin: 40px 0 90px 0;
+                        flex-flow: wrap;
+                        .box{
+                                @extend .col-md-6;
+                                padding: 0;
+                                margin-top: 50px;
+                                display: flex;
+                                justify-content: center;
+                                .chave{
+                                        .conteudo{
+                                                h3{
+                                                        color: $preto;
+                                                        font-size: 24px;
+                                                        font-weight: 700;
+                                                        margin: 10px 0 20px 0;
+                                                }
+                                        }
+                                }
+                        }
+                }
+        }
+}
+.single-servico{
+        @extend .col-md-12;
+        padding: 0;
+        .swiper-container {
+                width: 100%;
+                height: 100%;
+                position: relative;
+                .swiper-wrapper{
+                        background: $amarelo;
+                        .swiper-slide {
+                                color: #fff;
+                                -webkit-box-sizing: border-box;
+                                box-sizing: border-box;
+                                padding: 0px; 
+                                display: flex;
+                                height: auto;  
+                                display: flex;
+                                justify-content: space-between;
+                                align-items: center;
+                                .conteudo{
+                                        @extend .col-md-5;
+                                        padding: 0;
+                                        h1{
+                                                color: #fff;
+                                                font-weight: 700;
+                                                font-size: 32px;
+                                        }
+                                        p{
+                                                color: #fff;
+                                                font-weight: 300;
+                                                font-size: 16px;
+                                        }
+                                } 
+                                .foto{  
+                                        @extend .col-md-5;
+                                        padding: 0;
+                                }
+                        }
+                }
+                .navegacao-swiper{
+                        @extend .col-md-7;
+                        padding: 0;
+                        display: flex;
+                        justify-content: flex-end;
+                        align-items: center;
+                        background-color: #fff;
+                        padding: 70px 50px;
+                        .botoes{
+                                display: flex;
+                                align-items: center;
+                                justify-content: space-between;
+                                width: 8%;
+                                height: fit-content;
+                                margin-right: 60px;
+                                .swiper-button-next, .swiper-button-prev{
+                                        position: relative;
+                                        width: 0;
+                                        height: auto;
+                                        svg{
+                                                rect{
+                                                        transition: all .3s;    
+                                                        &:hover{
+                                                                transition: all .3s;
+                                                                fill: $amarelo;
+                                                        }
+                                                }
+                                        }
+                                }
+                                .swiper-button-prev{
+                                        &:hover{
+                                                transition: all .3s;
+                                        }
+                                }
+                                .swiper-button-next{
+                                        &:hover{
+                                                transition: all .3s;
+                                        }   
+                                }                    
+                        }    
+                }
+        }        
 }
